[gd_scene load_steps=6 format=3 uid="uid://cr8bvgmgqm1b8"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_y0api"]

[sub_resource type="LabelSettings" id="LabelSettings_8ximv"]
font_size = 200

[sub_resource type="LabelSettings" id="LabelSettings_6prd0"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_5ccm4"]
font_size = 50
font_color = Color(1, 1, 1, 0.294118)

[sub_resource type="LabelSettings" id="LabelSettings_rvrka"]
font_size = 50
font_color = Color(1, 1, 1, 0.294118)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y0api")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.0
offset_top = 100.0
offset_right = 291.0
offset_bottom = 373.0
grow_horizontal = 2
text = "PONG"
label_settings = SubResource("LabelSettings_8ximv")

[node name="MenuItemStartPvP" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = 10.0
offset_right = 254.5
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Player vs Player"
label_settings = SubResource("LabelSettings_6prd0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuItemStartPvE" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = 110.0
offset_right = 254.5
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2
text = "Start Player vs CPU"
label_settings = SubResource("LabelSettings_5ccm4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuItemStartQuit" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.5
offset_top = 210.0
offset_right = 254.5
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit Game"
label_settings = SubResource("LabelSettings_rvrka")
horizontal_alignment = 1
vertical_alignment = 1
